FIX full-stack content overlapping full-stack img by adding 0.5% to the top:; css attribute

--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -114,7 +114,7 @@
 }
 
 #sub-content{
-    top:83%;
+    top:83.5%;
     right:-30%;
 }
 
